# ugh

./: .gitignore  CMakeLists.txt  CMakeMacro.cmake  README  TODO  ugh.spec
debian/: changelog  control  copyright  rules  ugh-dev.install  ugh.install  ugh.substvars
tmp/: coro.c  coro_ucontext_native.c  dns.3.1  dns.8.8  gai.c  inet_addr.c  test_pool.c  test_resolver.c  yandex.ru.txt
tmp/dyn/: app.c  app.h  lib.c
ugh/: autoconf.h.in  channel.c  client.c  config.c  config.h  daemon.c  module.c  module.h  module_add_header.c  module_core.c  module_import.c  module_map.c  module_proxy.c  module_push_pass.c  module_push_publisher.c  module_push_subscriber.c  module_return.c  module_set.c  module_subreq.c  module_upstream.c  parser.c  resolver.c  resolver.h  server.c  status.c  subreq.c  template.c  ugh.cfg.in  ugh.h  upstream.c  variables.c
ugh/aux/: buffer.c  buffer.h  config.h  daemon.c  daemon.h  gmtime.h  hashes.h  logger.c  logger.h  memory.c  memory.h  random.c  random.h  resolver.c  resolver.h  socket.h  string.c  string.h  system.c  system.h
ugh/coro/: coro.c  coro.h
ugh/coro_ucontext/: coro_ucontext.c  coro_ucontext.h
ugh_example/: config.cfg.in  module.c
